K8S/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canvas
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: canvas
