K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canvas
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: canvas.amolgcp.in
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: canvas
            port:
              number: 80
